--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@emotion/is-prop-valid": "^1.2.0",
+    "@smui/layout-grid": "^7.0.0-beta.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "svelte": "^3.49.0",
     "svelte-motion": "^0.11.2",
